--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,6 +11,7 @@ defaults:
       path: ""
     values:
       layout: "default"
+      title: developer camp
 
 plugins:
 - jekyll-optional-front-matter
