--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-title: cloudIA - Cloud Infrastrcuture Automation
+title: cloudIA
 description: educational grade development tools
 google_analytics:
 show_downloads: true
